<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcActivity"
    android:padding="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meterCalc"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/etCountMeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/tvHomePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/etHomePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp"/>


    <TextView
        android:id="@+id/tvWallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/etWallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>


    <TextView
        android:id="@+id/tvProcentRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/etProcentRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvRateDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rateDate"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/etRateDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:layout_weight="1"
            android:layout_margin="15dp"/>
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_margin="15dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>