<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="18dp">

    <ImageView
        android:id="@+id/imMirea"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo_mirea_for_app"
        android:layout_above="@id/tvStart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stLogin"
        android:layout_marginBottom="18dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tvStart"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/stLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/border_edit_text"
        android:hint="@string/stLogin"
        android:padding="8dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/stPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_edit_text"
        android:hint="@string/stPassword"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/stPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/start"
        android:textSize="18sp"
        android:backgroundTint="@color/myBlue"/>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnStart"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:text="@string/developer"
        android:textSize="12sp"/>
</RelativeLayout>